Revision history for Perl extension Starch-Plugin-Net-Statsd.

{{$NEXT}}

 - Require perl 5.8 per Manilla.
 - Simplify VERSION declarations.

0.03 2019-02-18T06:02:53Z

 - Migrate build tooling from Dist::Zilla to Minilla.
 - Migrate all the tests from Test::More to Test2::V0.
 - Remove test dependency on Package::Stash.

0.02 2018-05-17

 - Stop hiding packages from indexing.
 - Make sure we set Carp::Internal during set/get/remove.

0.01 2015-08-03

 - First version.
