@@ -2,6 +2,7 @@ Revision history for Perl extension Starch-Plugin-Net-Statsd.
 
 {{$NEXT}}
 
+ - Fix tests under FreeBSD and Windows.
  - Require perl 5.8 per Manilla.
  - Simplify VERSION declarations.
 
